<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.geelaro.wechatex.MainActivity">

    <item
        android:id="@+id/search"
        android:icon="@mipmap/actionbar_search_icon"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search" />

    <item android:id="@+id/action_plus"
        android:icon="@mipmap/actionbar_add_icon"
        app:actionProviderClass="com.geelaro.wechatex.PlusActionProvider"
        app:showAsAction="ifRoom"
        android:title="@string/action_plus" />

    <item
        android:id="@+id/action_album"
        android:icon="@mipmap/ofm_photo_icon"
        android:title="@string/action_album" />

    <item android:id="@+id/action_collection"
        android:icon="@mipmap/ofm_collect_icon"
        android:title="@string/action_collection" />

    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ofm_setting_icon"
        app:showAsAction="never"
        android:title="@string/action_settings" />

    <item android:id="@+id/action_feed"
        android:icon="@mipmap/ofm_feedback_icon"
        android:title="@string/action_feed" />

</menu>